--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,12 @@
       },
       "description": "Open bookmark fuzzy finder"
     }
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
+    }
+  ]
 }
