--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+Q"
+        "default": "Ctrl+Shift+K",
+        "mac": "Command+Shift+K"
       },
       "description": "Open bookmark fuzzy finder"
     }
